--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,9 +46,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      # Running lint check command
+      - name: Run Lint
+        uses: ./gradlew lintDebug
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
