--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,9 @@ jobs:
         uses: actions/checkout@v3
 
         -uses: actions/setup-java@v3
+         with:
+          distribution: temurin
+          java-version: 11
 
       # Running lint check command
       - name: Run Lint
