--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,10 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - uses: actions/setup-java@v3
-        with:
-            distribution: temurin
-            java-version: 11
+#      - uses: actions/setup-java@v3
+#        with:
+#            distribution: temurin
+#            java-version: 11
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
