--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,6 @@ jobs:
       - name: Upload html test report
         uses: actions/upload-artifact@v3
         with:
-          name: lint.html
+          name: index.html
           path: app/build/reports/lint-results-debug.html
 
