--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,9 @@ jobs:
     steps:
       - name: Checkout the code
         uses: actions/checkout@v3
+        
+      - name: Run Lint
+        run: ./gradlew lintDebug
 
       - name: Upload html test report
         uses: actions/upload-artifact@v3
