Updated gitIgnore file Added unit tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,9 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: /Users/mac/AndroidStudioProjects/CICDIntegrationExample/
+#    defaults:
+#      run:
+#        working-directory: /Users/mac/AndroidStudioProjects/CICDIntegrationExample/
     steps:
       - name: Checkout the code
         uses: actions/checkout@v3
@@ -26,7 +26,7 @@ jobs:
 
       - name: Upload html test report
         uses: actions/upload-artifact@v3
-
+        working-directory: /Users/mac/AndroidStudioProjects/CICDIntegrationExample/
         with:
           name: lint.html
           path: app/build/reports/lint-results-debug.html
