--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Upload html test report
         uses: actions/upload-artifact@v3
-        working-directory: /Users/mac/AndroidStudioProjects/CICDIntegrationExample/
+#        working-directory: /Users/mac/AndroidStudioProjects/CICDIntegrationExample/
         with:
           name: lint.html
           path: app/build/reports/lint-results-debug.html
