--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,21 +14,17 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
-#    defaults:
-#      run:
-#        working-directory: /Users/mac/AndroidStudioProjects/CICDIntegrationExample/
     steps:
       - name: Checkout the code
         uses: actions/checkout@v3
         
-#      - name: Run Lint
-#        run: ./gradlew lintDebug
+      - name: Run Lint
+        run: ./gradlew lintDebug
 
       - name: Upload html test report
         uses: actions/upload-artifact@v3
-#        working-directory: /Users/mac/AndroidStudioProjects/CICDIntegrationExample/
         with:
           name: lint.html
-          path: lint-results-debug.html
+          path: app/build/reports/lint-results-debug.html
 #          path: ${{ github.workspace }}/app/build/reports/lint-results-debug.html
 
