--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,9 @@ jobs:
       - name: Run Lint
         run: ./gradlew lintDebug
 
-#      - name: Upload html test report
-#        uses: actions/upload-artifact@v3
-#        with:
-#          name: lint.html
-#          path: app/build/reports/lint-results-debug.html
+      - name: Upload html test report
+        uses: actions/upload-artifact@v3
+        with:
+          name: lint.html
+          path: app/build/reports/lint-results-debug.html
 
