--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,3 +43,20 @@ jobs:
           name: unit_test_report
           path: app/build/reports/tests/testDebugUnitTest/
 
+    static-code-analysis:
+      needs: [ unit-test ]
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout the code
+          uses: actions/checkout@v3
+
+        - name: set up JDK 11
+          uses: actions/setup-java@v3
+          with:
+            java-version: 11
+
+        - name: SonarCloud Scan
+          run: ./gradlew app:sonarqube -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
