--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,7 @@ buildscript {
 
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.3"
-        classpath "com.google.dagger:hilt-android-gradle-plugin:2.28.3-alpha"
+        classpath 'com.android.tools.build:gradle:7.3.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3"
     }
