--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,8 @@ jobs:
       steps:
         - name: Checkout the code
           uses: actions/checkout@v3
+          with:
+            fetch-depth: 0
 
         - name: set up JDK 11
           uses: actions/setup-java@v1
