--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,17 +62,17 @@ jobs:
 
 
   package:
-    needs: [ static-code-analysis ]
+#    needs: [ static-code-analysis ]
     name: Generate APK
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the code
         uses: actions/checkout@v3
 
-      - name: set up JDK 1.8
+      - name: set up JDK 11
         uses: actions/setup-java@v1
         with:
-          java-version: 1.8
+          java-version: 11
 
       - name: Build debug APK
         run: ./gradlew assembleDebug --stacktrace
